# KI-GUI

./: README.md  docker-compose.yml
api/: .env_examaple  .gitignore  Dockerfile  README.md  database.db  pyproject.toml
api/app/: annotations.py  config.py  database.py  main.py  models.py  utils.py
api/app/src/: routers.py
api/app/src/categories/: controllers.py  routers.py  schemas.py
api/app/src/completion/: controllers.py  routers.py  schemas.py
api/app/src/courses/: controllers.py  routers.py  schemas.py
api/app/src/enrollments/: controllers.py  routers.py  schemas.py
api/app/src/roles/: controllers.py  routers.py  schemas.py
api/app/src/statuses/: controllers.py  routers.py  schemas.py
api/app/src/students_courses/: controllers.py  routers.py  schemas.py
api/app/src/students_tasks/: routers.py  schemas.py
api/app/src/task_completions/: controllers.py  routers.py  schemas.py
api/app/src/tasks/: controllers.py  routers.py  schemas.py
api/app/src/users/: controllers.py  routers.py  schemas.py
api/src/: main.py
docker/: docker-compose.yml
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.jsx  App.tsx  config.ts  index.tsx  main.tsx
frontend/src/components/: CourseAssignment.tsx  CourseCard.jsx  CourseCard.tsx  CourseManagement.tsx  Dashboard.tsx  LoadingSpinner.tsx  Login.jsx  Login.tsx  Navbar.tsx  ProtectedRoute.tsx  TaskManagement.tsx  (+2 more)
mobile/: README.md  docker-compose.yml
mobile/doc/: DEV.md  USER.md
mobile/src/: app.json  package-lock.json  package.json
(+52 files in other folders)
