[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "marek.tremel",email = "tremelmarek@gmail.com"}
]
package-mode = false



readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi[standard] (>=0.115.8,<0.116.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
